fix: align problems at cart page

--- a/src/styles/carrinho-de-compras.module.css
+++ b/src/styles/carrinho-de-compras.module.css
@@ -185,6 +185,9 @@
 }
 
 @media (min-width: 1070px) {
+  .main_container {
+    align-items: center;
+  }
   .emptyCart_text {
     font-size: 20px;
   }
